--- a/clientsrc/src/assets/_variables.scss
+++ b/clientsrc/src/assets/_variables.scss
@@ -36,6 +36,7 @@ $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-200 !default;
 $dark:          $gray-900 !default;
+$bluer:         $blue !default;
 
 $yiq-contrasted-threshold:  170 !default;
 
